# calibration

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build-site.yaml  deploy-site.yaml  run-tests.yaml
scripts/: calibrate.py  collect_sim_data.py
src/rpad/calibration/: aloha_with_marker.py  estimate_tag_and_cam.py  utils.py
