[project]
name = "rpad-calibration"
version = "0.1.0"
description = "Calibration tools for R-Pad."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE.txt" }
authors = [{ email = "baeisner@andrew.cmu.edu", name = "Ben Eisner" }]
dependencies = [
    "jax>=0.5.0 ; sys_platform == 'darwin'",
    "jax[cuda12]>=0.5.0 ; sys_platform == 'linux'",
    "matplotlib>=3.10.0",
    "mujoco>=3.2.7",
    "opencv-python>=4.11.0.86",
    "optax>=0.2.4",
    "robot-descriptions>=1.14.0",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
stubPath = ".typings"
ignore = ["third_party"]
extraPaths = ["src", "third_party"]

[build-system]
requires = ["setuptools >= 62.3.2", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["basedpyright>=1.27.1"]

[project.optional-dependencies]
develop = [
    "jupyterlab == 4.3.5",
    "mypy == 1.15.0",
    "pre-commit == 4.1.0",
    "pybind11-stubgen>=2.5.1",
    "pyright>=1.1.394",
    "pytest == 8.3.4",
    "ruff>=0.9.6",
]
docs = ["mkdocs-material>=9.6.4", "mkdocstrings[python]>=0.28.1"]

# This is required to allow us to have notebooks/ at the top level.
[tool.setuptools.packages.find]
where = ["src", "third_party"]

[tool.setuptools.package-data]
rpad = ["py.typed"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "third_party",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
preview = true
select = ["E", "F", "I", "NPY"]
fixable = ["ALL"]

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
